# django-api-bolierplate

./: .flake8  .pre-commit-config.yaml  Dockerfile  README.rst  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
cores/: manage.py
cores/authentication/views/: login.py
cores/general/utils/: misc.py
cores/project/: urls.py
cores/project/settings/: __init__.py  base.py  docker.py  envvars.py
cores/project/settings/templates/: settings.dev.py
cores/users/migrations/: 0001_initial.py
cores/users/serializers/: user.py
cores/users/views/: user.py
